<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LocationMainActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_mobile1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile1"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:drawableRight="@drawable/ic_contact_mail_black_24dp"/>
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_mobile2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile2"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:drawableRight="@drawable/ic_contact_mail_black_24dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_msg_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_frequency"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="17sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_msg_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msg_duration"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="17sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:text="START "
        android:textColor="@android:color/white" />


</LinearLayout>
